--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
           content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Pixel Art</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./src/style.css">
 </head>
 <body>
     <div id="app"></div>
-    <script src="script.js"></script>
+    <script src="./src/script.js"></script>
 </body>
 </html>
